[gd_scene load_steps=6 format=3 uid="uid://bcff6q3p84kcp"]

[ext_resource type="Script" path="res://main.gd" id="1_m6cyr"]
[ext_resource type="PackedScene" uid="uid://d1r2uv8we64gr" path="res://actor.tscn" id="2_et47b"]

[sub_resource type="Animation" id="Animation_thguf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fjgmk"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bvn3w"]
_data = {
"RESET": SubResource("Animation_thguf"),
"fade": SubResource("Animation_fjgmk")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_m6cyr")
Actor = ExtResource("2_et47b")

[node name="Actors" type="Node2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="VBoxContainer" parent="UILayer"]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="SaveJSON" type="Button" parent="UILayer/UI"]
layout_mode = 2
text = "Save (JSON)"

[node name="SaveConfigFile" type="Button" parent="UILayer/UI"]
layout_mode = 2
text = "Save (ConfigFile)"

[node name="SaveCustomResource" type="Button" parent="UILayer/UI"]
layout_mode = 2
text = "Save (Custom Resource)"

[node name="SavePackedScene" type="Button" parent="UILayer/UI"]
layout_mode = 2
text = "Save (PackedScene)"

[node name="HSeparator" type="HSeparator" parent="UILayer/UI"]
layout_mode = 2

[node name="LoadJSON" type="Button" parent="UILayer/UI"]
layout_mode = 2
disabled = true
text = "Load (JSON)"

[node name="LoadConfigFile" type="Button" parent="UILayer/UI"]
layout_mode = 2
disabled = true
text = "Load (ConfigFile)"

[node name="LoadCustomResource" type="Button" parent="UILayer/UI"]
layout_mode = 2
disabled = true
text = "Load (Custom Resource)"

[node name="LoadPackedScene" type="Button" parent="UILayer/UI"]
layout_mode = 2
disabled = true
text = "Load (PackedScene)"

[node name="HSeparator2" type="HSeparator" parent="UILayer/UI"]
layout_mode = 2

[node name="Clear" type="Button" parent="UILayer/UI"]
layout_mode = 2
text = "Clear All Saves"

[node name="Notification" type="Label" parent="UILayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 79.0
grow_vertical = 0
text = "Save Time"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UILayer/Notification"]
libraries = {
"": SubResource("AnimationLibrary_bvn3w")
}

[connection signal="pressed" from="UILayer/UI/SaveJSON" to="." method="_on_save_json_pressed"]
[connection signal="pressed" from="UILayer/UI/SaveConfigFile" to="." method="_on_save_config_file_pressed"]
[connection signal="pressed" from="UILayer/UI/SaveCustomResource" to="." method="_on_save_custom_resource_pressed"]
[connection signal="pressed" from="UILayer/UI/SavePackedScene" to="." method="_on_save_packed_scene_pressed"]
[connection signal="pressed" from="UILayer/UI/LoadJSON" to="." method="_on_load_json_pressed" flags=3]
[connection signal="pressed" from="UILayer/UI/LoadConfigFile" to="." method="_on_load_config_file_pressed" flags=3]
[connection signal="pressed" from="UILayer/UI/LoadCustomResource" to="." method="_on_load_custom_resource_pressed" flags=3]
[connection signal="pressed" from="UILayer/UI/LoadPackedScene" to="." method="_on_load_packed_scene_pressed" flags=3]
[connection signal="pressed" from="UILayer/UI/Clear" to="." method="_on_clear_pressed"]
